# Clasificaci-n-de-Pitches-de-Startups

./: .gitignore  README.md  proyecto.ipynb  pyproject.toml
