[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "seaborn>=0.13.2",
    "ipykernel",
    "scikit-learn>=1.7.2",
    "tensorflow"
]
